[package]
name = "compdiff"
version = "0.1.1"
edition = "2021"
author = ["Kacper Ozieblowski"]
description= "Compare the output of program to reference programs."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
which = { version = "4.3.0", features = [] }
string-error = "0.1.0"
process_control = "4.0.1"
